--- a/webapp/channels/src/sass/routes/_admin-console.scss
+++ b/webapp/channels/src/sass/routes/_admin-console.scss
@@ -620,6 +620,7 @@
 .admin-sidebar {
     z-index: 10;
     display: flex;
+    overflow: hidden;
     width: 220px;
     flex-direction: column;
     background: #111;
@@ -705,6 +706,7 @@
         height: calc(100% - 68px);
         padding-bottom: 20px;
         margin-top: 1px;
+        overflow-x: hidden;
 
         ul {
             padding-bottom: 20px;
